--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.9.1",
     "date-fns": "^2.28.0",
+    "font-awesome": "^4.7.0",
     "react": "^18.2.0",
     "react-big-calendar": "^1.2.1",
     "react-calendar": "^3.7.0",
